--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,10 @@ spring.quartz.properties.org.quartz.threadPool.threadCount = 5
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=firojalam.khan@gmail.com
-spring.mail.password=
-
+#spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+#Spring Basic security
+spring.security.user.name=sahaj
+spring.security.user.password=welcome123
